--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,15 @@
+lsi: false
+safe: true
+source: main
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
+
 remote_theme: pages-themes/merlot@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: JawnRPG
 description: JawnRPG
