--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
 
-remote_theme: pages-themes/merlot@v0.2.0
+remote_theme: pages-themes/midnight@v0.2.0
 
 title: JawnRPG
 description: JawnRPG
